--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
     --secondary-text-color: #5c5c62;
     --durability-text-color: #6a737d9c;
     --icon-color: #6a737d;
-    --border-color: #ff9a0045;
-    --text-decoration-color: #ff9a00;
+    --border-color: #7700ff;
+    --text-decoration-color: #7700ff;
 }
 
 .container {
@@ -88,7 +88,6 @@ body {
   .contact-info__block {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
   }
 
   .contact-info__block--center {
@@ -102,9 +101,6 @@ body {
       justify-content: start;
   }
 
-  .contact-info__item:not(:last-child) {
-      margin-bottom: 20px;
-  }
 
   .contact-info__item-icon-wrapper {
       margin-right: 10px;
